gatekeeper/desotech/dryrun/existing_resources/ingress01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress01
spec:
  rules:
    - host: example.desotech.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application01
                port:
                  number: 80
